--- a/index.html
+++ b/index.html
@@ -103,6 +103,6 @@
 
 	
 
-	<script type="text/javascript" src="./game.js"></script>
+	<script type="text/javascript" src="./gameBoard.js"></script>
 </body>
 </html>
